src/objects/CventEvents__NominationCommentConfiguration__c.object
<CustomObject>
    <description>Configuration that allows to set up templates which will help nomination requester and approvers to add relevant comments throughout nomination process.</description>
    <fields>
        <fullName>CventEvents__Action__c</fullName>
        <description>Type of action for which the configuration is set.</description>
        <inlineHelpText>Type of action for which the configuration is set.</inlineHelpText>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nomination Request</fullName>
                </value>
                <value>
                    <fullName>Nomination Approval</fullName>
                </value>
                <value>
                    <fullName>Nomination Rejection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__DefaultComment__c</fullName>
        <label>Default Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsCommentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the comment is required.</description>
        <inlineHelpText>Indicates whether the comment is required.</inlineHelpText>
        <label>Is Comment Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Nomination Comment Configuration</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__Action__c</columns>
        <columns>CventEvents__IsCommentRequired__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NCC-{00000000}</displayFormat>
        <label>Nomination Comment Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nomination Comment Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>